# hal-core-2.0

./: CMakeLists.txt  gitnotes.txt
nc_files/nc_files_grotius/: G2.ngc  G9_test.ngc  testfile.ngc  testfile_g64.ngc
nc_files/nc_files_lcvette/: testfile_lcvette.ngc
pictures/: btn_25_25_in.png~  btn_25_25_settings.png~
projects/cnc/: CMakeLists.txt  OcctQtViewer.cpp  form_dro.cpp  form_dro.h  form_dro.ui  form_jog.cpp  form_jog.h  form_jog.ui  form_settings.cpp  form_settings.h  form_settings.ui  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
projects/cnc_temp/: CMakeLists.txt  form.cpp  form.h  form.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
projects/gcode_parser/: CMakeLists.txt  gcode_parser.cpp  gcode_parser.h
src/hal/: hal.h
src/hal/components/state_machine/: CMakeLists.txt  state_machine.c  state_machine.h  state_machine_shm.cpp  state_machine_shm.h  state_machine_vector.cpp  state_machine_vector.h
src/hal/components/test/: test.c
src/hal/halcmd/: CMakeLists.txt
